--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
-<?php include_once(“home.html”); ?>
-<?php include_once(“home.html”); ?>
-<?php include_once(“home.html”); ?>
+<h1> hello dudu !!! <h1>
+<h1> hello dudu !!! <h1>
+<h1> hello dudu !!! <h1>
+<h1> hello dudu !!! <h1>
+<h1> hello dudu !!! <h1>
+<h1> hello dudu !!! <h1>
+<h1> hello dudu !!! <h1>
+<h1> hello dudu !!! <h1>
+<h1> hello dudu !!! <h1>
+<h1> hello dudu !!! <h1>
+<h1> hello dudu !!! <h1>
+<h1> hello dudu !!! <h1>
+<h1> hello dudu !!! <h1>
+<h1> hello dudu !!! <h1>
+<h1> hello dudu !!! <h1>
+<h1> hello dudu !!! <h1>
