--- a/index.html
+++ b/index.html
@@ -1,16 +1,3 @@
 <h1> hello dudu !!! <h1>
-<h1> hello dudu !!! <h1>
-<h1> hello dudu !!! <h1>
-<h1> hello dudu !!! <h1>
-<h1> hello dudu !!! <h1>
-<h1> hello dudu !!! <h1>
-<h1> hello dudu !!! <h1>
-<h1> hello dudu !!! <h1>
-<h1> hello dudu !!! <h1>
-<h1> hello dudu !!! <h1>
-<h1> hello dudu !!! <h1>
-<h1> hello dudu !!! <h1>
-<h1> hello dudu !!! <h1>
-<h1> hello dudu !!! <h1>
-<h1> hello dudu !!! <h1>
-<h1> hello dudu !!! <h1>
+<h1> !!! This is only for testing purpose !!! <h1>
+
