--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
-<h1> hello dudu !!! <h1>
+<!DOCTYPE html>
+<html>
+    <head>
+<title>
+ Testing
+ </title>
+ </head>
+    <body>
+        <!-- the content goes here -->
+     <h1> hello dudu !!! <h1>
 <h1> !!! This is only for testing purpose !!! <h1>
 <h3> made by AV !!<h3>
  <p style="font-size:100px">&#128540;</p>
+    </body>
+</html>
+
 
